--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "css-loader": "^0.28.11",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "style-loader": "^0.21.0"
   }
 }
